<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Alexander Martinz
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="configure">Configure</string>
    <string name="download">Download</string>
    <string name="enter_url">Enter URL to file</string>
    <string name="save_file_as">Save file as</string>
    <string name="auto_detect">Auto detect</string>
    <string name="auto_detect_summary">If enabled, the file name gets auto detected via the entered URL</string>
    <string name="auto_extract">Auto insert URL from clipboard</string>
    <string name="auto_extract_summary">If enabled, the last URL you copied to your clipboard will get inserted when launching QuickLoader</string>

    <string name="please_enter_url">Please enter an URL!</string>
    <string name="filename_must_not_be_empty">Filename must not be empty!</string>
    <string name="url_start_with_http">URL must start with \"http\" or \"https\"!</string>

    <string name="verify_url_title">Verify URL</string>
    <string name="verify_url_message">Please verify that the following URL is valid\n\n%s</string>

    <string name="started_download_toast">Started downloading \"%s\"</string>

    <string name="pref_publish_tile_title">Publish quick tile</string>
    <string name="pref_publish_tile_n_title">Add quick tile</string>
    <string name="pref_publish_tile_summary">Adds a quick tile for easy and fast access to QuickLoader, in case it is not showing or if you have removed it</string>
    <string name="pref_publish_tile_n_summary">Go to your quick tile settings and add QuickLoader</string>
    <string name="message_published_tile">Poked the system to add a quick tile!</string>

    <string name="notification">Notification</string>
    <string name="notification_content">Press to open QuickLoader dialog</string>
    <string name="pref_publish_notification_bootup_title">Publish when booting</string>
    <string name="pref_publish_notification_bootup_summary">Adds a notification when the device has booted up</string>

    <string name="pref_publish_notification_title">Publish notification</string>
    <string name="pref_publish_notification_summary">Adds a notification to quickly access QuickLoader</string>
    <string name="message_published_notification">Added QuickLoader notification!</string>

    <string name="pref_cancel_notification_title">Cancel notification</string>
    <string name="pref_cancel_notification_summary">Removes a previously published QuickLoader notification</string>
    <string name="message_cancel_notification">Removed QuickLoader notification!</string>

    <string name="category_general">General</string>

    <string name="tile_content_description">Adds a quick tile for easy and fast access to QuickLoader</string>

    <string name="toast_permission_grant">Need to grant storage permission to download!</string>
</resources>
